[project]
name = "brahe-mcp"
version = "0.1.0"
description = "MCP server wrapping the Brahe astrodynamics library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Duncan Eddy", email = "duncan.eddy@gmail.com" }]
keywords = ["space", "astrodynamics", "satellite", "mcp"]

dependencies = [
    "brahe>=1.1.4",
    "mcp>=1.9.0",
    "pydantic>=2.0",
    "loguru>=0.7",
]

[project.scripts]
brahe-mcp = "brahe_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brahe_mcp"]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]
